fix(navbar): actualizar color de fondo en estado scrolled Se modifica el color de fondo de la clase 'navbar.scrolled' para mejorar la visibilidad y el contraste del menú de navegación. El nuevo color de fondo (#000000) proporciona una apariencia más consistente y profesional en la interfaz de usuario.
No hay issues
#Close 0

--- a/resources/css/input.css
+++ b/resources/css/input.css
@@ -11,7 +11,7 @@
 }
 
 .navbar.scrolled {
-    background-color: #002B5B;
+    background-color: #000000;
 }
 
 .navbar.bg-black {
